--- a/ha4task2.ipynb
+++ b/ha4task2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "10d82b52",
    "metadata": {},
    "outputs": [
@@ -42,15 +42,16 @@
     }
    ],
    "source": [
+    "# Importing necessary libraries\n",
     "import spacy\n",
     "\n",
     "# Loading English Language Model\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
-    "# Input\n",
+    "# Input sentence\n",
     "sentence = \"Barack Obama served as the 44th President of the United States and won the Nobel Peace Prize in 2009.\"\n",
     "\n",
-    "# Processing Sentence\n",
+    "# Processing sentence\n",
     "doc = nlp(sentence)\n",
     "\n",
     "# Extracting and printing the named entities\n",
@@ -66,11 +67,13 @@
     "Short Answer Questions:\n",
     "\n",
     "1. How does NER differ from POS tagging in NLP?\n",
+    "\n",
     "- NER focuses on what the word is and POS tagging sees how the word is being used in a sentence\n",
     "\n",
     "2. Describe two applications that use NER in the real world (e.g., financial news, search engines).\n",
+    "\n",
     "- In financial news NER can be used to infer company names, stock tickers, etc\n",
-    "- in search engines we can analyse the different entities that make up a query. like queries like 'What is the capital of Japan?' recognizing the entity like the country in question and the capital of the country will help in retrieving relevant information."
+    "- in search engines we can analyse the different entities that make up a query. like queries like 'What is the capital of Japan?' recognizing the entity like the country in question and the capital of the country will help in retrieving relevant information.\n"
    ]
   },
   {
