--- a/ha4task1.ipynb
+++ b/ha4task1.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "690b0149",
    "metadata": {},
    "outputs": [
@@ -58,22 +58,30 @@
     }
    ],
    "source": [
+    "# Import libraries\n",
     "import nltk\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import PorterStemmer\n",
     "\n",
+    "\n",
+    "# Download necessary files\n",
     "nltk.download('punkt')\n",
     "nltk.download('stopwords')\n",
     "\n",
+    "# Function to preprocess the sentence\n",
     "def preprocess(sentence):\n",
+    "    # Tokenization of sentence\n",
     "    tokens = word_tokenize(sentence)\n",
     "    print(f\"tokens: {tokens}\")\n",
     "    \n",
+    "    # Creating of a list of English stopwords\n",
     "    stop_words = set(stopwords.words('english'))\n",
+    "    # Filtered tokens by removing stopwords\n",
     "    filtered_tokens = [word for word in tokens if word.lower() not in stop_words]\n",
     "    print(f'tokens without stop words: {filtered_tokens}')\n",
     "    \n",
+    "    # Stemming the tokens to root words\n",
     "    stemmer = PorterStemmer()\n",
     "    stemmed_tokens = [stemmer.stem(word) for word in filtered_tokens]\n",
     "    print(f'words after stemming: {stemmed_tokens}')\n",
@@ -93,16 +101,17 @@
     "1. What is the difference between stemming and lemmatization? Provide examples with the word “running.”\n",
     "\n",
     "- Stemming reduces words to their root words by removing prefixes or suffixes. It doesn’t consider the context or actual dictionary word.\n",
-    "running becomes run but porter stemmer might return run or even runn\n",
+    "  running becomes run but porter stemmer might return run or even runn\n",
     "\n",
     "- Lemmatization reduces words to their lemma which is the dictionary base form of the words using vocabulary and morphological analysis. It considers the part of speech.\n",
-    "running is seen as averb and changed to run\n",
+    "  running is seen as averb and changed to run\n",
     "\n",
     "- One difference between Lemmatization and Stemming is that Lemmatization is more accurate but slower than stemming.\n",
     "\n",
     "2. Why might removing stop words be useful in some NLP tasks, and when might it actually be harmful?\n",
+    "\n",
     "- Removing stop words might be useful when performing tasks like text summarization where we focus more on the core content of the text.\n",
-    "- Removing stop words might be harmful when performing sentiment analysis tasks. If we remove not from 'not good' then the meaning is lost and results in misclassification. "
+    "- Removing stop words might be harmful when performing sentiment analysis tasks. If we remove not from 'not good' then the meaning is lost and results in misclassification.\n"
    ]
   }
  ],
