--- a/ha4task3.ipynb
+++ b/ha4task3.ipynb
@@ -88,9 +88,12 @@
     "Short Answer Questions:\n",
     "\n",
     "1. Why do we divide the attention score by √d in the scaled dot-product attention formula?\n",
-    "   Scaled down by a factor to prevent exploding dot products and vanishing softmax gradients when the dimension gets large\n",
+    "\n",
+    "- It is scaled down by a factor √d to prevent exploding dot products and vanishing softmax gradients when the dimension gets large\n",
+    "\n",
     "2. How does self-attention help the model understand relationships between words in a sentence?\n",
-    "   It helps the model to assess the importance of words in a sentence with respect to each other word. It helps the model capture long range relationships even if the words are far way from each other.\n"
+    "\n",
+    "- It helps the model to assess the importance of words in a sentence with respect to each other word. It helps the model capture long range relationships even if the words are far way from each other.\n"
    ]
   }
  ],
